src/test/run-pass/alt-pattern-simple.rs


fn altsimple(f: int) { match f { x => () } }

fn main() { }
